# cybersathi

./: .env.example  .gitattributes  .githubworkflowsci-cd.yml  .gitignore  .replit  CURRENT_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_VERIFIED.md  ENV_CONFIGURATION_GUIDE.md  LOCAL_DEPLOYMENT_TEST.md  LOCAL_SETUP_GUIDE.md  MONGODB_SETUP.md  PHASE_1_2_PROGRESS.md  PRODUCTION_CHECKLIST.md  PS2_IMPLEMENTATION_PLAN.md  README.md  SETUP_GUIDE.md  START_README.md  _start_app.bat  package.json  pyproject.toml  replit.md  start.bat  start_app.bat  start_app.sh  start_backend.sh  vercel.json
attached_assets/logo_files/: README.md  index.html  package.json  vite.config.ts
backend/: .env.example  .env.production.example  Dockerfile  requirements.txt  server.py  vercel.json
backend/app/: -init-.py  config.py  database.py  main.py
backend/rasa/: Dockerfile  config.yml  credentials.yml  domain.yml  endpoints.yml
backend/scripts/: init_db.py
backend/tests/: test_main.py  (+1 more)
docs/: API_DOCUMENTATION.md  ENCRYPTION_SECURITY.md  IMPLEMENTATION_SUMMARY.md  NCRP_INTEGRATION.md  NLU_IMPLEMENTATION.md  README.md  Troubleshooting.md  WHATSAPP_INTEGRATION.md  runbook.md
frontend/: .env.example  .env.production  Dockerfile  index.html  package.json  tailwind.config.js  vercel.json  vite.config.js
infra/: docker-compose.yml
scripts/: .env.example  create_missing_files.bat  create_missing_files.sh  db_migrate.py  demo.bat  demo.sh  start_local.bat  start_local.sh  startup_complete.bat  startup_complete.sh  stop_services.bat  stop_services.sh  universal_launcher.py  verify_installation.sh
(+120 files in other folders)
