[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "aioredis>=2.0.1",
    "alembic>=1.17.1",
    "apscheduler>=3.11.1",
    "asyncpg>=0.30.0",
    "authlib>=1.6.5",
    "bcrypt>=5.0.0",
    "beanie>=2.0.0",
    "celery[redis]>=5.5.3",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "faker>=38.0.0",
    "fastapi>=0.121.2",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "mongomock-motor>=0.0.36",
    "motor>=3.7.1",
    "numpy>=2.3.4",
    "openai==0.28.1",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "prometheus-client>=0.23.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentry-sdk[fastapi]>=2.44.0",
    "sqlalchemy>=2.0.44",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.38.0",
]
